# find-share

./: .env.example  .gitignore  FINANCIAL_REPORT_SCREENING_IMPROVEMENTS.md  FINANCIAL_REPORT_SCREENING_REVIEW.md  PROGRESS.md  README.md  improvements.md  pyproject.toml  requirements.txt  review.md
docs/: pharma_ground_truth_rulebook.md
scripts/: backtest_forward_returns.py  baseline_diff.py  bootstrap_emweb_industry.py  data_source_baseline.py  download_annual_reports.py  export_labeling_queue.py  import_candidate_labels.py  import_evidence_claims.py  import_global_stock_mappings.py  import_overseas_revenue.py  import_pharma_vbp_events.py  import_research_reports.py  init_pharma_templates.py  monitor_changes.py  p0_audit.py  refresh_a_stock_skill_data.py  refresh_financials_and_valuation.py  research_rag_cli.py  review_overseas_parser_quality.py  review_pharma_ground_truth.py  run_after_disclosure.py  run_consistency_check.py  run_pharma_vbp_recovery.py  run_phase0_poc.py  run_phase2_strategy1.py  run_phase3_strategy3.py  validate_next_financials.py  validate_pharma_ground_truth.py
src/: __init__.py  config.py
src/collectors/: __init__.py  _em_throttle.py  _retry.py  a_stock_skill_source.py  akshare_impl.py  annual_report_parser.py  base.py  cached_impl.py  cninfo_downloader.py  eastmoney_research.py  emweb_client.py  f10_overseas_revenue.py  global_stock_mapping.py  industry_mapping.py  neglect_evidence.py  sina_impl.py  ths_forecast.py  tushare_impl.py
src/indicators/: __init__.py  growth.py  valuation.py
src/knowledge/: __init__.py  research_rag.py
(+63 files in other folders)
