[project]
name = "find-share"
version = "0.1.0"
description = "A 股选股框架：消费反转 / 医药量价齐升 / 出海隐形冠军"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.10",
    "pdfplumber>=0.10",
    "requests>=2.31",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "tqdm>=4.65",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.scripts]
find-share = "pipeline.cli:main"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
